--- a/meta_project/src/components/index.css
+++ b/meta_project/src/components/index.css
@@ -144,3 +144,11 @@ footer ul li a{
   display: flex;
   flex-wrap: wrap;
 }
+
+.back{
+  background-color: rgb(22, 177, 22);
+  height: 40px;
+  width: 90px;
+  color: rgba(234, 240, 239, 0.911);
+  text-decoration: none;
+}
